Display EventGeyser Succ Position.

--- a/MakefileNSO
+++ b/MakefileNSO
@@ -44,7 +44,7 @@ INCLUDES	:=	include
 #---------------------------------------------------------------------------------
 ARCH	:=	-march=armv8-a -mtune=cortex-a57 -mtp=soft -fPIC -ftls-model=local-exec
 
-CFLAGS	:=	-g -Wall -ffunction-sections \
+CFLAGS	:=	-g -Wall -ffunction-sections -fpermissive\
 			$(ARCH) $(DEFINES)
 
 CFLAGS	+=	$(INCLUDE) -D__SWITCH__ -DS2VER=$(S2VER) -DS2VERSTR=$(S2VERSTR) -D_NEW
